# libflash_attn

include/: flash.h
src/: CMakeLists.txt  flash_api.cpp
